# trip-planner-ai

./: .gitignore  README.md  main.py  pyproject.toml  test_routing.py  test_scout.py
app/: main.py
app/agents/: architect.py  scout.py
app/database/: connection.py
app/utils/: accommodations.py  maps.py  routing.py  transport.py
